# basic-components

./: .gitignore  .prettierrc  CHANGELOG.md  DOCS.md  Makefile  README.md  TESTING.md  TODO.md  app.py  copier.yml  create_icons.py  docker-compose.yml  llms.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: publish.yml  release.yml
basic_components/: cli.py
basic_components/cli/: components.py
basic_components/utils/: jinjax.py
components/: README.md
components/blocks/: AvatarDropdown.jinja  Dashboard.jinja  Header.jinja  Login.jinja  MenuButton.jinja  NavLink.jinja  Navbar.jinja  Navigation.jinja  SearchBar.jinja  TableList.jinja
components/icons/: AArrowDown.jinja  AArrowUp.jinja  ALargeSmall.jinja  Accessibility.jinja  Activity.jinja  AirVent.jinja  Airplay.jinja  AlarmClock.jinja  AlarmClockCheck.jinja  AlarmClockMinus.jinja  AlarmClockOff.jinja  AlarmClockPlus.jinja  AlarmSmoke.jinja  Album.jinja  AlignCenter.jinja  AlignCenterHorizontal.jinja  AlignCenterVertical.jinja  AlignEndHorizontal.jinja  AlignEndVertical.jinja  AlignHorizontalDistributeCenter.jinja  AlignHorizontalDistributeEnd.jinja  AlignHorizontalDistributeStart.jinja  AlignHorizontalJustifyCenter.jinja  AlignHorizontalJustifyEnd.jinja  AlignHorizontalJustifyStart.jinja  AlignHorizontalSpaceAround.jinja  AlignHorizontalSpaceBetween.jinja  AlignJustify.jinja  AlignLeft.jinja  AlignRight.jinja  AlignStartHorizontal.jinja  AlignStartVertical.jinja  AlignVerticalDistributeCenter.jinja  AlignVerticalDistributeEnd.jinja  AlignVerticalDistributeStart.jinja  AlignVerticalJustifyCenter.jinja  AlignVerticalJustifyEnd.jinja  AlignVerticalJustifyStart.jinja  AlignVerticalSpaceAround.jinja  AlignVerticalSpaceBetween.jinja  (+1492 more)
components/ui/: Accordion.jinja  AccordionContent.jinja  AccordionItem.jinja  AccordionTrigger.jinja  Alert.jinja  AlertDescription.jinja  AlertDialogContent.jinja  AlertTitle.jinja  Badge.jinja  Button.jinja  Card.jinja  CardContent.jinja  CardDescription.jinja  CardFooter.jinja  CardHeader.jinja  CardTitle.jinja  Checkbox.jinja  Dialog.jinja  DialogBody.jinja  DialogClose.jinja  DialogContent.jinja  DialogDescription.jinja  DialogFooter.jinja  DialogHeader.jinja  DialogOverlay.jinja  DialogTitle.jinja  DialogTrigger.jinja  DropdownMenu.jinja  DropdownMenuCheckboxItem.jinja  DropdownMenuContent.jinja  DropdownMenuGroup.jinja  DropdownMenuItem.jinja  DropdownMenuLabel.jinja  DropdownMenuRadioItem.jinja  DropdownMenuSeparator.jinja  DropdownMenuSub.jinja  DropdownMenuSubContent.jinja  DropdownMenuSubTrigger.jinja  DropdownMenuTrigger.jinja  Form.jinja  (+48 more)
demo/: app.py
demo/examples/: AccordianDemo.jinja  AlertDemo.jinja  Buttons.jinja  CardComponent.jinja  FormDemo.jinja  Icons.jinja  Inputs.jinja  PopoverDemo.jinja  SelectComponents.jinja  ToastDemo.jinja
demo/templates/: index.html  sample_form.html
docs/: app.py  config.py  demo.py  main.py  markdown.py  routes.py  site.py  site_config.py  templates.py
docs/content/: index-saved.md  index.md
docs/demo/: button.py  wtform.py
docs/static/: custom.css
docs/templates/: content.html  examples.html  icons_search.html  (+1 more)
documentation/: CREATING_COMPONENTS.md  input.css  mkdocs.yml  nginx.conf  package-lock.json  package.json  tailwind.config.js
examples/: AlertDemo.jinja  AlertDialog.jinja  BadgeDemo.jinja  Buttons.jinja  CardComponent.jinja  DarkMode.jinja  DialogComponent.jinja  DropdownMenuDemo.jinja  FormDemo.jinja  Icons.jinja  Inputs.jinja  ModalDialog.jinja  PopoverDemo.jinja  SelectComponents.jinja  SheetDemo.jinja  Tables.jinja  app.py  package.json
examples/django/: app.py  pyproject.toml  requirements.txt
examples/fastapi/: app.py  package-lock.json  pyproject.toml
examples/fastapi/components/ui/card/: Card.jinja
examples/fastapi/templates/: index.html
examples/flask/: app.py  pyproject.toml  requirements.txt  tailwind.config.js
examples/flask/components/ui/button/: Button.jinja
examples/flask/components/ui/card/: CardContent.jinja
shadcn-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: App.tsx
templates/: base.html  dashboard.html  index.html  sample_form.html
tests/: test_tailwind.py
tools/: component_analyzer.py  create_icons.py  create_svg_icons.py
(+1785 files in other folders)
