[project]
name = "basic-components-django-example"
version = "0.1.0"
requires-python = ">=3.10"

packages = ["example"]

dependencies = [
    "Django>=4.2.0,<5.0.0",
    "jinjax[whitenoise]>=0.47",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example"]
