[project]
name = "basic-components-flask-example"
version = "0.1.0"
requires-python = ">=3.10"

packages = ["example"]

dependencies = [
    "Flask>=3.0.0",
    "jinjax>=0.47",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example"]